fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -6,13 +6,21 @@ body {
   padding-right: 0px;
   top: 0px;
   overflow-y: hidden;
+  overflow-x: overlay;
   scrollbar-width: none;
-  -ms-overflow-style: none;
+  /* -ms-overflow-style: none; */
   padding-bottom: 0px;
 }
 
 body::-webkit-scrollbar {
-  display: none;
+  width: 5px;
+  height: 8px;
+  background-color: rgba(0,0,0,0);; /* or add it to the track */
+}
+
+/* Add a thumb */
+body::-webkit-scrollbar-thumb {
+  background: #fff9e0;
 }
 
 p {
@@ -21,7 +29,7 @@ p {
 
 
 .big {
-  top: 5px;
+  top: 0px;
   margin: 0px;
   padding: 0;
   display: flex;
@@ -35,6 +43,20 @@ p {
 }
 
 #bgr {
+  max-height: 100vh;
+  height:100vh;
+  min-height: 100vh;
+  flex-direction: row;
+}
+
+#bgl2 {
+  max-height: 100vh;
+  height:100vh;
+  min-height: 100vh;
+  flex-direction: row;
+}
+
+#bgr2 {
   max-height: 100vh;
   height:100vh;
   min-height: 100vh;
